stoped bleeding

--- a/styles/boende.css
+++ b/styles/boende.css
@@ -121,6 +121,6 @@
 }
 
 .last-pic img {
-  width: 100vw;
+  width: 100%;
   margin-top: 30px;
 }
